tdf#149748 sd theme: fix crash on selecting none from color bar

Opening Impress, going to view -> color bar to enable it and then
clicking on "none" resulted in a crash.

This went wrong in commit f5db3b12ae1cd3bfe6ee5d260aec9532cc65f2dc (sd
theme: add UI (sidebar) for shape fill color, 2022-04-06), where I
assumed that in case the slot is a SID_ATTR_FILL_COLOR, then its item
set also has a SID_ATTR_FILL_COLOR key. This is usually true, but not in
case of "no color" (i.e. transparent).

Fix the problem by just skipping theming metadata for such a color.

It seems to me that the color set of a theme is not allowed to contain
such "no color" colors, so this should be safe.

Change-Id: I3fb65548dca1d78631311de56c15fdb655b9645a